Kubernetes_lab_files/app-with-init.yaml
apiVersion: v1
kind: Pod
metadata:
    name: app-pod
spec:
    containers:
    - name: main-app
      image: busybox:stable
      command: ["sh", "-c", "echo 'Main application started' && sleep 3600"]
