Kubernetes_lab_files/config-demo.yaml
apiVersion: v1
kind: Pod
metadata:
    name: config-demo-pod
spec:
    containers:
    - name: busybox
      image: busybox:stable
      command: ["sh", "-c", "printenv | grep -E 'APP_ENV|LOG_LEVEL|DATABASE_HOST|FEATURE_FLAG' && sleep 3600"]
    restartPolicy: Never
