Kubernetes_lab_files/config-files-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: config-files-pod
spec:
    containers:
    - name: busybox
      image: busybox:stable
      command: ["sh", "-c", "ls /config && cat /config/application.properties && sleep 3600"]
      volumeMounts:
      - name: config-volume
        mountPath: /config
    volumes:
    - name: config-volume
      configMap:
        name: app-files
    restartPolicy: Never
