Kubernetes_lab_files/demo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: demo-pod
spec:
    containers:
    - name: nginx
      image: nginx:alpine
      ports:
      - containerPort: 80
    - name: busybox
      image: busybox:stable
      command: ["sh", "-c", "sleep 3600"]
