Kubernetes_lab_files/fail-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: fail-pod
spec:
    containers:
    - name: busybox
      image: busybox:stable
      command: ["sh", "-c", "echo 'Task failed' && sleep 3 && exit 1"]
    restartPolicy: Never
