Kubernetes_lab_files/init-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: init-pod
spec:
    containers:
    - name: nginx
      image: nginx:alpine
      ports:
      - containerPort: 80

    - name: busybox
      image: busybox:stable
      command: ['sh', '-c', 'sleep 3600']
