Kubernetes_lab_files/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: nginx-pod
spec:
    containers:
    - name: nginx
      image: nginx:alpine       # lightweight image
      ports:
      - containerPort: 80
