Kubernetes_lab_files/probed-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: probed-pod
spec:
    containers:
    - name: busybox
      image: busybox:stable
      command: ["sh", "-c", "sleep 10 && exit 1"] # still crashes after 10 seconds
      livenessProbe:
        exec:
            command:
            - sh
            - -c
            - "echo 'I am alive'"
        initialDelaySeconds: 5
        periodSeconds: 10
      readinessProbe:
        exec:
            command:
            - sh
            - -c
            - "echo 'I am ready'"
        initialDelaySeconds: 5
        periodSeconds: 10
