Kubernetes_lab_files/secret-files-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: secret-files-pod
spec:
    containers:
    - name: busybox
      image: busybox:stable
      command: ["sh", "-c", "echo '=== Secret Files ===' && ls -l /secrets && echo '=== Username ===' && cat /secrets/username && echo '=== Password ===' && cat /secrets/password && sleep 3600"]
      volumeMounts:
      - name: secret-volume
        mountPath: /secrets
        readOnly: true
    volumes:
    - name: secret-volume
      secret:
        secretName: app-secret
    restartPolicy: Never
