Kubernetes_lab_files/dependency-service.yaml
apiVersion: v1
kind: Pod
metadata:
    name: dependency-service
    labels:
        app: database
spec:
    containers:
    - name: nginx
      image: nginx:alpine
      ports:
      - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
    name: dependency-service
spec:
    selector:
        app: database
    ports:
    - port: 80
      targetPort: 80
