Kubernetes_lab_files/mysql-headless.yaml
apiVersion: v1
kind: Service
metadata:
    name: mysql-headless
spec:
    clusterIP: None
    selector:
        app: mysql
    ports:
    - port: 3306
      targetPort: 3306
