Kubernetes_lab_files/nginx-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
    name: nginx-nodeport
spec:
    type: NodePort
    selector:
        app: nginx
    ports:
    - port: 80
      targetPort: 80
      nodePort: 30080   # You can choose between 30000-32767
