Kubernetes_lab_files/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: nginx-service
spec:
    type: ClusterIP     # This is the default
    selector:
        app: nginx
    ports:
    - port: 80          # Port the Service listens on
      targetPort: 80    # Port inside the container
